Proyecto3/kube-yamls/server-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-go-deploy
  labels:
    app: server-go 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-go
  template:
    metadata:
      labels:
        app: server-go
    spec:
      containers:
      - name: server-go
        image: unacetic-limbate-mae.ngrok-free.dev/server-go:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: server-go-service
  labels:
    app: server-go
spec:
  selector:
    app: server-go
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
