Proyecto3/kube-yamls/ingress-proyecto.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-proyecto
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-rust-service
            port:
              number: 80
      - path: /clima
        pathType: Prefix
        backend:
          service:
            name: api-rust-service
            port:
              number: 80
